crates/warden-jarmeta/tests/snapshots/corpus__forge-1.16.5-appleskin.snap
---
source: crates/warden-jarmeta/tests/corpus.rs
description: "forge-1.16.5-appleskin (Minecraft 1.16.5, loader forge)"
---
{
  "descriptors": [
    "modsToml",
    "manifest"
  ],
  "mods": [
    {
      "source": "modsToml",
      "loader": "forge",
      "id": "appleskin",
      "version": "2.5.1+mc1.16.4",
      "name": "AppleSkin",
      "description": "Adds various food-related HUD improvements",
      "authors": [
        "squeek"
      ],
      "licenses": [
        "The Unlicense"
      ],
      "dependencies": [
        {
          "id": "forge",
          "kind": "required",
          "range": {
            "dialect": "maven",
            "spec": "[33,)"
          },
          "side": "client",
          "ordering": "after"
        }
      ],
      "loaderVersion": {
        "dialect": "maven",
        "spec": "[33,)"
      }
    }
  ],
  "languageLoader": {
    "name": "javafml",
    "version": {
      "dialect": "maven",
      "spec": "[33,)"
    }
  },
  "manifest": {
    "implementationTitle": "AppleSkin",
    "implementationVersion": "2.5.1+mc1.16.4"
  },
  "classVersion": {
    "major": 52,
    "minor": 0
  }
}
