crates/warden-jarmeta/tests/snapshots/corpus__forge-1.16.5-curios.snap
---
source: crates/warden-jarmeta/tests/corpus.rs
description: "forge-1.16.5-curios (Minecraft 1.16.5, loader forge)"
---
{
  "descriptors": [
    "modsToml",
    "manifest"
  ],
  "mods": [
    {
      "source": "modsToml",
      "loader": "forge",
      "id": "curios",
      "version": "1.16.5-4.1.0.0",
      "name": "Curios API",
      "description": "A flexible and expandable accessory/equipment API for users and developers.",
      "authors": [
        "C4"
      ],
      "licenses": [
        "LGPL-3.0-or-later"
      ],
      "dependencies": [
        {
          "id": "forge",
          "kind": "required",
          "range": {
            "dialect": "maven",
            "spec": "[34,)"
          }
        },
        {
          "id": "minecraft",
          "kind": "required",
          "range": {
            "dialect": "maven",
            "spec": "[1.16.3,1.17)"
          }
        }
      ],
      "minecraft": {
        "dialect": "maven",
        "spec": "[1.16.3,1.17)"
      },
      "loaderVersion": {
        "dialect": "maven",
        "spec": "[34,)"
      }
    }
  ],
  "languageLoader": {
    "name": "javafml",
    "version": {
      "dialect": "maven",
      "spec": "[34,)"
    }
  },
  "manifest": {
    "implementationTitle": "Curios API",
    "implementationVersion": "property(class java.lang.String, provider(?))"
  },
  "classVersion": {
    "major": 52,
    "minor": 0
  }
}
